@@ -20,7 +20,7 @@ pour avoir des détails sur les autres utilitaires GNU PIC.
 .BR \-g ", "\-\-strip\-debug
 Éliminer les symboles de débogage.
 .TP
-.BR \-? ", " \-h ", " \-\-help
+.BR \-h ", " \-\-help
 Afficher ce message d'utilisation et quitter.
 .TP
 .BR "\-k SYMBOLE" , " \-\-keep\-symbol SYMBOLE
